--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@
     </div>
 </div>
 
-<div class="autopar">
+<div class="autopar autopar1">
     <div class="autochild1">
         <h2 class="order_h">Promise Secure Subscription Experiences</h2>
         <p class="order_p">Stay compliant with the latest taxation and privacy regulations to enter and scale new markets with agility.</p>
