demo and pricing added

--- a/demo.html
+++ b/demo.html
@@ -5,80 +5,103 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="demo.css">     
+    <link rel="stylesheet" href="demo.css">    
+    <style>
+      *{
+          font-family: 
+"IBM Plex Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+      }
+  </style> 
 </head>
 <body>
-   <div class="top_bg">a</div>
-  <div id="top">
-   <div id="logo">
-      <a href="index.html"><img src="https://www.chargebee.com/static/resources/brand/chargebee-logo-white.svg" alt="" id="image"> </a>
 
-   </div>
-   <div id="heading">
-      <div id="para">
-         <h1>
-            Elevate Your Subscription Experience with Chargebee 
-         </h1>
-         <h6>
-            Get a demo that's customized around your unique subscription workflows and pain-points.
-         </h6>
- 
+   <div id="elevateparent">
+
+
+      <!-- website logo -->
+      <div id="imgtop">
+         <img src="https://i.pinimg.com/originals/9e/6f/8e/9e6f8e37961f6dcf89341e470cc80a5b.png" alt="">
       </div>
-      <div id="form">
-         <form action="">
-            <input type="text" placeholder="First Name" class="inputs">
-            <hr>
-            <input type="email" placeholder="Business Email" class="inputs">
-            <hr>
-            <input type="text" placeholder="Mobile" class="inputs">
-            <hr>
-            <input type="text" placeholder="Your website" class="inputs"> 
-            <hr>
-            <p>Is your company headquartered in India?</p>
-            <input type="radio" name="ans" value="yes" class="inputs"><span>Yes</span>
-            <input type="radio" name="ans" value="no" class="inputs"><span>No</span><br><br>
-            <p>What problem can Chargebee solve for you?</p>
-            <input type="text" class="description">
-            <input type="submit" value="Schedule a Demo ➡ " class="btn">
-            <p> By clicking on Schedule a Demo, you acknowledge having read our <a href=""> Privacy Notices</p><a\>
-            
-         </form>
+
+<br><br><br><br><br>
+      <div id="elevatechild">
+
+         <!-- Elevate Your Subscription -->
+         <div id="elachild1">
+            <h1>Elevate Your Subscription Experience with Chargebee</h1>
+            <h2>Get a demo that's customized around your unique subscription workflows and pain-points.</p>
+         </div>
+         <div id="form">
+            <form action="">
+               <input type="text" placeholder="First Name" class="inputs">
+               <hr>
+               <input type="email" placeholder="Business Email" class="inputs">
+               <hr>
+               <input type="text" placeholder="Mobile" class="inputs">
+               <hr>
+               <input type="text" placeholder="Your website" class="inputs"> 
+               <hr>
+               <p>Is your company headquartered in India?</p>
+               <input type="radio" name="ans" value="yes" class="inputs"><span>Yes</span>
+               <input type="radio" name="ans" value="no" class="inputs"><span>No</span><br><br>
+               <p>What problem can Chargebee solve for you?</p>
+               <input type="text" class="description">
+               <input type="submit" value="Schedule a Demo ➡ " class="btn">
+               <p> By clicking on Schedule a Demo, you acknowledge having read our <a href=""> Privacy Notices</p></a>
+               
+            </form>
+         </div>
+
+
       </div>
+
+
    </div>
 
-  </div> 
-  <!-- <div class="logo2">
-   <div class="icon"> 
-      <img src="https://webstatic.chargebee.com/assets/web/519/images/schedule-a-demo/logos/okta.svg" alt="">
-   </div>
-   <div class="icon"> <img src="https://webstatic.chargebee.com/assets/web/519/images/schedule-a-demo/logos/calendly.svg" alt=""></div>
-   <div class="icon"> <img src="https://webstatic.chargebee.com/assets/web/519/images/schedule-a-demo/logos/freshworks.svg" alt=""></div>
-   <div class="icon"> <img src="https://webstatic.chargebee.com/assets/web/519/images/schedule-a-demo/logos/study-com.svg" alt=""></div>
-   <div class="icon"> <img src="https://webstatic.chargebee.com/assets/web/519/images/schedule-a-demo/logos/doodle.svg" alt=""></div>
-   <div class="icon"> <img src="https://webstatic.chargebee.com/assets/web/519/images/schedule-a-demo/logos/envoy.svg" alt=""></div>
-   
-  </div>
-   <div class="second-para">
-   <div class="para-mid">
-      <p>Chargebee is a fantastic solution that really meets the needs of any online business from Saas to e-commerce. I have had experience with many platforms both as a leader and as a consultant, and Chargebee is the platform I have liked the most.</p>
-      <h1>Dailius Wilson</h1>
-      <p>VP Sales & Growth, GetAccept</p>
-   </div>
-   <div class="img-mid">
-      <img src="https://webstatic.chargebee.com/assets/web/519/images/schedule-a-demo/dailius-wilson.png" alt="">  
-   </div>
-   
-  </div>   
-  <div class="footer">
-   <div> 
-      <img src="https://webstatic.chargebee.com/assets/web/519/images/g2-badge-collection/chargebee-top-100-fastest-growing-products-g2.svg" alt="">
-     </div>
-   <div class="abc"><img src="https://webstatic.chargebee.com/assets/web/519/images/g2-badge-collection/chargebee-best-results-subscription-management-g2-spring.svg" alt=""></div>
-   <div class="abc"><img src="https://webstatic.chargebee.com/assets/web/519/images/g2-badge-collection/chargebee-leader-subscription-management-g2-spring.svg" alt=""></div>
-  </div> -->
 
+
+
+
+
+
+
+  <br><br><br><br>
 
   <img id='oneimg' src="https://i.pinimg.com/originals/36/eb/95/36eb95d304f0da3d5e70c724441bca97.png" alt="">
+
+
+
+
+
+
+<br><br><br><br>
+  <!-- lower part -->
+
+  <div id="dailpar">
+
+
+   <div id="dailchild1">
+      <p>Chargebee is a fantastic solution that really meets the needs of any online business from Saas to e-commerce. I have had experience with many platforms both as a leader and as a consultant, and Chargebee is the platform I have liked the most.</p>
+      <h3>Dailius Wilson</h3>
+      <h4>VP Sales & Growth, GetAccept</h4>
+   </div>
+
+   <div id="dailchild2">
+      <img id="dc11" src="https://webstatic.chargebee.com/assets/web/543/images/pricings/arrow.svg" alt="">
+      <img id="dc12" src="https://webstatic.chargebee.com/assets/web/543/images/schedule-a-demo/dailius-wilson.png" alt="">
+   </div>
+
+
+
+
+  </div>
+
+
+
+<hr id="horline">
+
+<img id="dc13" src="https://i.pinimg.com/originals/ee/09/88/ee09887bee8681670f9cdc5820ec1a75.png" alt="">
+
 
   
 </body>
