dark mode added for home page

--- a/signin1.html
+++ b/signin1.html
@@ -51,11 +51,11 @@
                 <div class="login-form-footer">
                     <a href="#">
                         <!-- facebook image -->
-                        <img src="" alt=""> Facebook Login
+                        <img style='width:30px;height:30px' src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT3Eg411G6z7DA8-HphENR18zI-__xSh7kU2w&usqp=CAU" alt=""> Facebook Login
                     </a>
                     <a href="#">
                         <!-- google image -->
-                        <img src="" alt=""> Google Login
+                        <img style='width:30px;height:30px' src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcStiZIUhPzyamlPDOS8XDKcZM8Rcg6gofLx_g&usqp=CAU" alt=""> Google Login
                     </a>    
                 </div>
             </form>
